--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo_application",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-react": "^7.12.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -12,11 +12,15 @@
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "mdbreact": "^4.27.0",
+    "native-base": "^2.13.14",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.12.0",
     "react_ujs": "^2.6.1",
+    "shards-react": "^1.0.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
