--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,18 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/.vscode
+/.artifacts
+/.idea/
+/.rakeTasks
+/.generators
+/spec/screenshots
+.DS_Store
+.env
+.rspec
+
+/public/403.html
+/public/404.html
+/public/422.html
+/public/500.html
